--- a/app/package.json
+++ b/app/package.json
@@ -62,6 +62,7 @@
     "@trpc/server": "^10.45.0",
     "@vercel/og": "^0.5.9",
     "archiver": "^6.0.0",
+    "aws-sdk": "^2.1588.0",
     "chroma-js": "^2.4.2",
     "concurrently": "^8.2.0",
     "crypto-random-string": "^5.0.0",
